# autowiki-daemon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
autowiki/: cli.py
autowiki/core/: compiler.py  db.py  llm_schemas.py
autowiki/mcp/: server.py
docs/: 00-PROBLEM-STATEMENT.md  01-PROVENANCE-AND-TRACEABILITY.md  02-CONFLICT-RESOLUTION.md  03-AUTO-SHARDING.md  03-CONCURRENCY-AND-CONTROL.md  04-GLOBAL-INDEX.md
tests/: conftest.py  test_compiler.py  test_db.py  test_mcp_server.py
