[project]
name = "autowiki-daemon"
version = "0.2.0"
description = "A deterministic LLM-Wiki orchestrator and knowledge MCP server"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.40",
    "rank_bm25>=0.2.2",
    "mcp>=0.1.0",
    "rich>=13.0.0"
]

[project.scripts]
autowiki = "autowiki.cli:app"
